--- a/config.ini
+++ b/config.ini
@@ -2,3 +2,6 @@
 credentials = /Users/rakhimovse/Projects/tutor/Иван/TelegramBots/credentials.json
 project_id = small-talk-jcctyj
 language_code = ru
+
+[TELEGRAM]
+token = 1659395590:AAEOhvHXOl6RU_QDTuMW8X5IciVfTWx6uvA
